Fix layout issue where the filter section would begin the animation before its supposed to

--- a/src/app/accommodation-list/accommodation-list.component.css
+++ b/src/app/accommodation-list/accommodation-list.component.css
@@ -50,7 +50,7 @@
     z-index: 1;
     gap:15px;
     top:0px;
-    transition: all 0.5s ease-in-out;
+    transition: all 0.4s ease-in-out;
 }
 
 
